@@ -35,6 +35,7 @@ V1.1 Release
 -Fixed an issue in the WPF version of InteractionNode.
 -Fixed an event invocation order issue and a parameter update issue related to routed messages.
 -Updated Spring.NET to version 1.3.0.
+-Made DefaultWindowManager more friendly to WPF's NavigationWindow.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
